# reth

./: Cargo.toml
crates/optimism/node/: Cargo.toml
crates/optimism/rpc/: Cargo.toml
crates/optimism/rpc/src/eth/: block.rs  mod.rs
crates/primitives/src/transaction/: signature.rs  util.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: data.rs  eth.rs  lib.rs
crates/rpc/rpc-builder/src/: lib.rs
crates/rpc/rpc-eth-api/: Cargo.toml
crates/rpc/rpc-eth-api/src/: core.rs  data.rs  lib.rs  types.rs
crates/rpc/rpc-eth-api/src/helpers/: block.rs  data.rs  mod.rs  spec.rs
crates/rpc/rpc-types-compat/src/engine/: payload.rs
crates/rpc/rpc/src/: trace.rs
crates/rpc/rpc/src/eth/: core.rs
crates/rpc/rpc/src/eth/api/: mod.rs  server.rs
crates/rpc/rpc/src/eth/helpers/: block.rs  spec.rs
