[package]
name = "reth-rpc-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Reth RPC interfaces"

[lints]
workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-engine-primitives.workspace = true
reth-network-peers.workspace = true

alloy-rlp.workspace = true
alloy-dyn-abi = { workspace = true, features = ["eip712"] }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

alloy-chains.workspace = true
alloy-trie.workspace = true

#allow-serde.workspace = true

alloy-rpc-types.workspace = true
alloy-rpc-types-anvil.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-genesis.workspace = true
alloy-node-bindings.workspace = true
alloy-provider.workspace = true
alloy-eips.workspace = true
alloy-signer.workspace = true
alloy-signer-wallet.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true

alloy-serde.workspace = true

# misc
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

[features]
client = ["jsonrpsee/client", "jsonrpsee/async-client"]
