[package]
name = "reth-rpc-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Reth RPC interfaces"

[lints]
workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-engine-primitives.workspace = true
reth-network-peers.workspace = true

alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true

# misc
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

[features]
client = ["jsonrpsee/client", "jsonrpsee/async-client"]
